--- a/style.css
+++ b/style.css
@@ -8,12 +8,10 @@ body{
     background: rgb(233, 230, 230);
 }
 nav header{
-    width:100%;
+    width:100vw;
     height:80px;
     background: white;
-    font-weight: bold;
-   
-    
+    font-weight: bold;   
 }
 h2{
     line-height: 80px;
@@ -27,7 +25,7 @@ h2{
     margin-top: 20px;
     color:rgb(87, 189, 236);
     padding: 0px 40px;
-    margin-right:240px;
+    margin-right:183px;
 width: 50px;
 height: 50px;
 /* UI Properties */
@@ -40,7 +38,7 @@ opacity: 1;
     font-size: 20px;
     float: right;
     margin-top: -41px;
-    margin-right: 80px;
+    margin-right: 24px;
 }
 .container{
         width: 78%;
@@ -117,17 +115,12 @@ opacity: 1;
     
    .box{
     display: block;
-    align-items: center;
-    margin: auto;
+    margin:10px -6px;
    }
+   nav header{
+    width:100vw;
+    height:80px;
+  
+}
   }
 
-@media screen and(max-width:275){
-    .box{
-     margin: 20px 0px;
-        
-    }
-    .text2{
-        font-size: 15px;
-    }
-}
